Bug 1661955 - Fix stalled message display when using persistent NNTP connections. r=mkmelin